--- a/app/styles/canvas.css
+++ b/app/styles/canvas.css
@@ -3,13 +3,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 100vh;
     width: 100%;
 
 }
 
 #canvas1 {
-    height: 100%;
+    height: 80%;
     width: 100%;
-    border-radius: 25px;
+    border-radius: 15px;
 }
